--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,7 +29,11 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="col-2 col-md-2"></div>
+        <div class="col-8 col-md-8"></div>
+        <div class="col-2 col-md-2"></div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
