--- a/Develop/index.html
+++ b/Develop/index.html
@@ -29,49 +29,49 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">9AM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">10AM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">11AM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">12PM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">1PM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">2PM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">3PM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">4PM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
-      <div class="row">
+      <div class="row" >
         <div class="col-2 col-md-2 hour">5PM</div>
-        <div class="col-8 col-md-8"></div>
+        <div class="col-8 col-md-8 task"></div>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
     </div>
