--- a/index.html
+++ b/index.html
@@ -31,48 +31,48 @@
     <div class="container">
       <div class="row" >
         <div class="col-2 col-md-2 hour">9AM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="9"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">10AM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="10"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">11AM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="11"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">12PM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="12"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">1PM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="13"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">2PM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="14"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">3PM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="15"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">4PM</div>
-        <div class="col-8 col-md-8 task"></div>
+        <textarea class="col-8 col-md-8 description" id="16"></textarea>
         <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
       </div>
       <div class="row" >
         <div class="col-2 col-md-2 hour">5PM</div>
-        <div class="col-8 col-md-8 task"></div>
-        <div class="col-2 col-md-2 saveBtn "><i class="far fa-save fa-2x"></i></div>
+        <textarea class="col-8 col-md-8 description" id="17"></textarea>
+        <button class="col-2 col-md-2 saveBtn"><i class="far fa-save fa-2x"></i></button>
       </div>
     </div>
 
